# Breakout

./: .gitignore  CMakeLists.txt  README.md  compile.sh
include/: ball_object.hpp  game.hpp  game_level.hpp  game_object.hpp  particle_generator.hpp  post_processor.hpp  power_up.hpp  resource_manager.hpp  shader.hpp  sprite_renderer.hpp  text_renderer.hpp  texture.hpp
shaders/fragment/: post.frag
shaders/vertex/: post.vert  text.vert
src/: ball_object.cpp  game.cpp  game_level.cpp  game_object.cpp  glad.c  main.cpp  particle_generator.cpp  post_processor.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp
